1.0.0: Fix compatibilité z-index tooltip & modal

--- a/core/assets/css/scss/modules/modal/_modal.scss
+++ b/core/assets/css/scss/modules/modal/_modal.scss
@@ -13,7 +13,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 99999;
+	z-index: 99998;
 	background: rgba(39,42,53,.9);
 	opacity: 0;
 	pointer-events: none;
