--- a/core/assets/css/style.css
+++ b/core/assets/css/style.css
@@ -3714,7 +3714,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99999;
+  z-index: 99998;
   background: rgba(39, 42, 53, 0.9);
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -3900,7 +3900,7 @@
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   pointer-events: none;
-  z-index: 999;
+  z-index: 99999;
   white-space: nowrap;
   background: #2b2b2b;
   color: #fff;
@@ -4558,7 +4558,7 @@
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   pointer-events: none;
-  z-index: 999;
+  z-index: 99999;
   white-space: nowrap;
   background: #2b2b2b;
   color: #fff;
